v1/docs/ModelsEnrollmentExistingEnrollmentManagementRequest.md
# ModelsEnrollmentExistingEnrollmentManagementRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**ExistingCertificateId** | Pointer to **int32** |  | [optional] 
**CertificateId** | Pointer to **int32** |  | [optional] 
**RequestId** | Pointer to **int32** |  | [optional] 
**Password** | Pointer to **string** |  | [optional] 
**JobTime** | Pointer to **time.Time** |  | [optional] 

## Methods

### NewModelsEnrollmentExistingEnrollmentManagementRequest

`func NewModelsEnrollmentExistingEnrollmentManagementRequest() *ModelsEnrollmentExistingEnrollmentManagementRequest`

NewModelsEnrollmentExistingEnrollmentManagementRequest instantiates a new ModelsEnrollmentExistingEnrollmentManagementRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsEnrollmentExistingEnrollmentManagementRequestWithDefaults

`func NewModelsEnrollmentExistingEnrollmentManagementRequestWithDefaults() *ModelsEnrollmentExistingEnrollmentManagementRequest`

NewModelsEnrollmentExistingEnrollmentManagementRequestWithDefaults instantiates a new ModelsEnrollmentExistingEnrollmentManagementRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetExistingCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetExistingCertificateId() int32`

GetExistingCertificateId returns the ExistingCertificateId field if non-nil, zero value otherwise.

### GetExistingCertificateIdOk

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetExistingCertificateIdOk() (*int32, bool)`

GetExistingCertificateIdOk returns a tuple with the ExistingCertificateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetExistingCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) SetExistingCertificateId(v int32)`

SetExistingCertificateId sets ExistingCertificateId field to given value.

### HasExistingCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) HasExistingCertificateId() bool`

HasExistingCertificateId returns a boolean if a field has been set.

### GetCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetCertificateId() int32`

GetCertificateId returns the CertificateId field if non-nil, zero value otherwise.

### GetCertificateIdOk

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetCertificateIdOk() (*int32, bool)`

GetCertificateIdOk returns a tuple with the CertificateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) SetCertificateId(v int32)`

SetCertificateId sets CertificateId field to given value.

### HasCertificateId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) HasCertificateId() bool`

HasCertificateId returns a boolean if a field has been set.

### GetRequestId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetRequestId() int32`

GetRequestId returns the RequestId field if non-nil, zero value otherwise.

### GetRequestIdOk

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetRequestIdOk() (*int32, bool)`

GetRequestIdOk returns a tuple with the RequestId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRequestId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) SetRequestId(v int32)`

SetRequestId sets RequestId field to given value.

### HasRequestId

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) HasRequestId() bool`

HasRequestId returns a boolean if a field has been set.

### GetPassword

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetPassword() string`

GetPassword returns the Password field if non-nil, zero value otherwise.

### GetPasswordOk

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetPasswordOk() (*string, bool)`

GetPasswordOk returns a tuple with the Password field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPassword

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) SetPassword(v string)`

SetPassword sets Password field to given value.

### HasPassword

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) HasPassword() bool`

HasPassword returns a boolean if a field has been set.

### GetJobTime

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetJobTime() time.Time`

GetJobTime returns the JobTime field if non-nil, zero value otherwise.

### GetJobTimeOk

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) GetJobTimeOk() (*time.Time, bool)`

GetJobTimeOk returns a tuple with the JobTime field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetJobTime

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) SetJobTime(v time.Time)`

SetJobTime sets JobTime field to given value.

### HasJobTime

`func (o *ModelsEnrollmentExistingEnrollmentManagementRequest) HasJobTime() bool`

HasJobTime returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


